# SimPLEX

./: .gitignore  .hgignore  AACategoryProbabilityMatrixModel.h  CMakeLists.txt  Data.cpp  MCMC.h  Makefile  Makefile_old  Matrix.h  Network.cpp  Network.h  Options.h  PatchNotes.md  ProbabilityMatrixModel.h  README.md  SimPLEX.cpp  SingleSubstitutionRateModel.cpp  SubstitutionModelTypes.h  defaults.ctrl  install.sh  main.cpp  matrix  sequences.fasta  sources.mk  tree.newick
docs/: Readme.docx  readme2
examples/: 1_basic_model.lua  1_options.toml  2_basic_model.lua  2_options.toml  3_discrete_parameters.lua  3_options.toml  4_dynamic_discrete.lua  4_options.toml  5_compound_parameters.lua  5_options.toml  6_dependency_groups.lua  6_options.toml  7_hidden_states.lua  7_options.toml  clean_all_outputs.sh  groups-with-hidden.lua  options-uniform-prior.toml  uniform-prior.lua
examples/1_basic_model/: basic_model.lua  options.toml
examples/2_basic_model_expand/: basic_model_expand.lua  options.toml
examples/3_discrete_parameters/: discrete_parameters.lua  options.toml
examples/4_dynamic_discrete_parameters/: options.toml
examples/5_compound_parameters/: compound_parameters.lua  options.toml
examples/6_hidden_states/: hidden_states.lua  options.toml
examples/7_external_configuration/: options.toml  (+1 more)
gtest/: Makefile  cmake_install.cmake
resources/: 5taxon.tree  5taxon_mini_indel.fasta  defaults.ctrl  model.lua  normal_options.ctrl  options.ctrl  options.toml  options_default.ctrl  s1_create_ancestral.ctrl  s2_fixed_ancestral.ctrl  star_mcmc_sequences.fasta
src/: CMakeLists.txt  Data.cpp  Data.h  Environment.cpp  Environment.h  IO.cpp  IO.h  MCMC.cpp  MCMC.h  Makefile  Model.cpp  Model.h  Options.cpp  Options.h  ProbabilityMatrixModel.cpp  RadiusDependentModel.cpp  RadiusDependentModel.h  Sequence.cpp  Sequence.h  SimPLEX.cpp  SimPLEX.h  SingleProbabilityModel.cpp  SingleProbabilityModel.h  SingleSubstitutionRateModel.cpp  SingleSubstitutionRateModel.h  SubstitutionCounts.cpp  SubstitutionCounts.h  SubstitutionMixtureModel.cpp  SubstitutionMixtureModel.h  SubstitutionModel.cpp  SubstitutionModel.h  SubstitutionRateMatrixModel.cpp  SubstitutionRateMatrixModel.h  Tree.cpp  Tree.h  TreeTypes.h  Tree_B1.cpp  cmake_install.cmake  utils.cpp  utils.h
src/IO/: Files.cpp  Files.h  LuaUtils.cpp  LuaUtils.h  RawParameterTypes.cpp  RawParameterTypes.h  SequencesParser.cpp  SequencesParser.h  SubstitutionModelParameterWrapper.cpp  SubstitutionModelParameterWrapper.h  SubstitutionModelParser.cpp  SubstitutionModelParser.h  TreeParser.cpp  TreeParser.h
src/ModelParts/: AbstractComponent.cpp  AbstractComponent.h  ComponentSet.cpp  ComponentSet.h  Sequence.cpp  Sequence.h
src/ModelParts/SubstitutionModels/: Parameters.cpp  Parameters.h  RateVector.cpp  RateVector.h  States.cpp  States.h  SubstitutionModel.cpp  SubstitutionModel.h  cmake_install.cmake
src/ModelParts/SubstitutionModels/Components/: AbstractValueTypes.cpp  AbstractValueTypes.h  ComponentTypes.h  RateVector.cpp  RateVector.h  SampleableValueTypes.cpp  SampleableValueTypes.h  cmake_install.cmake
src/ModelParts/Trees/: BranchSplitting.cpp  BranchSplitting.h  Tree.cpp  Tree.h  TreeParts.cpp  TreeParts.h
src/Parameters/: AbstractParameter.cpp  AbstractParameter.h  AbstractValue.cpp  AbstractValue.h  ComponentSet.cpp  ComponentSet.h  ParameterSet.cpp  ParameterSet.h  RateVector.cpp  RateVector.h
src/Parameters/Types/: CategoryFloat.cpp  CategoryFloat.h  ContinuousFloat.cpp  ContinuousFloat.h  FixedFloat.cpp  FixedFloat.h  VirtualSubstitutionRate.cpp  VirtualSubstitutionRate.h
src/SubstitutionModels/: CMakeLists.txt  Makefile  SubstitutionModel.cpp  SubstitutionModel.h  SubstitutionModelParser.cpp  SubstitutionModelParser.h  SubstitutionModelTypes.cpp  SubstitutionModelTypes.h  cmake_install.cmake
src/SubstitutionModels/Components/: .#AbstractComponent.cpp  AbstractComponent.cpp  AbstractComponent.h  AbstractValue.cpp  AbstractValue.h  AbstractValueTypes.cpp  AbstractValueTypes.h  CMakeLists.txt  ComponentSet.cpp  ComponentSet.h  ComponentTypes.cpp  ComponentTypes.h  Makefile  RateVector.cpp  RateVector.h  SampleableValueTypes.cpp  SampleableValueTypes.h  cmake_install.cmake
src/SubstitutionModels/Components/Types/: .#AbstractValueTypes.cpp  AbstractValueTypes.cpp  AbstractValueTypes.h  Makefile  SampleableValueTypes.cpp  SampleableValueTypes.h  cmake_install.cmake
src/SubstitutionModels/Types/: CategoryGTR.cpp  CategoryGTR.h  CustomModel.cpp  CustomModel.h  FixedRate.cpp  FixedRate.h  GeneralTimeReversible.cpp  GeneralTimeReversible.h  SingleRate.cpp  SingleRate.h
src/Trees/: BranchSplitting.cpp  Tree.cpp  Tree.h  TreeParser.cpp  TreeParser.h  TreeParts.cpp  TreeParts.h  TreeTypes.cpp  TreeTypes.h
src/Trees/Types/: BranchSplitting.cpp  BranchSplitting.h  Tree.cpp  Tree.h  TreeParts.cpp  TreeParts.h  Tree_B1.cpp  Tree_B1.h
test/: AACategoryProbabilityMatrixModel.cpp  Network.cpp  ReadMatrix.cpp
testing/: 5taxon - Copy.tree  5taxon.fasta  5taxon.tree  matrix  matrix_out  model_1.txt  radius_dependent_model  sequences.fasta  sequences_short.fasta  single_mutation_rate_model  single_probability_model
tests/: CMakeLists.txt  Makefile  SequenceParserTests.h  all_tests.cpp  basic.cpp
(+158 files in other folders)
